# rust-sftp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/macos/: setup_sshd.sh
scripts/windows/: test_sftp.ps1
sftp-auth/: Cargo.toml
sftp-auth/src/: lib.rs
sftp-cli/: Cargo.toml
sftp-cli/src/: main.rs
sftp-core/: Cargo.toml
sftp-core/src/: lib.rs
sftp-net/: Cargo.toml
sftp-net/src/: lib.rs
sftp-net/tests/: smoke.rs
sftp-transfer/: Cargo.toml
sftp-transfer/src/: lib.rs
